fixed webcast text format and alignment.
git-svn-id: http://vreportetl01t.corp.hds.com/svnrepo/HDS.com-Revamp/hdscorp@2407 b06f84e9-1d16-493f-8c0d-41b76f67d7c8

--- a/content/src/main/content/jcr_root/etc/clientlibs/hdscorp/main/css/newsEvents01.css
+++ b/content/src/main/content/jcr_root/etc/clientlibs/hdscorp/main/css/newsEvents01.css
@@ -241,6 +241,19 @@ box-shadow: 4px 6px 5px 0px rgba(189,189,189,1);
     border: none;
 }
 
+
+div#newsEventCatagory .newsWrapper .newsWrapper{padding:0; width:100% !important}
+div#newsEventCatagory .newsWrapper .newsWrapper p{text-transform:none;}
+div#newsEventCatagory .newsWrapper .newsWrapper .WebcastDetails img{display:block;}
+
+@media screen and (max-width:768px) {
+	div.MobileHolderWrapper .newsWrapper .newsWrapper{padding:0; width:100% !important}
+	div.MobileHolderWrapper .newsWrapper .newsWrapper p{text-transform:none;}
+	div.MobileHolderWrapper .newsWrapper .newsWrapper .WebcastDetails img{display:block;}
+	div.MobileHolderWrapper .newsWrapper .newsWrapper .WebcastDetails img{display:block; max-width:100%;}
+}
+
+
 @media screen and (max-width:1024px) {
     .ios-alert {
         font-weight: bold;
